@@ -70,7 +70,7 @@ forecast.ets <- function(object, h=ifelse(object$m>1, 2*object$m, 10),
 	#out$x <- InvBoxCox(object$x,lambda)
 	#out$fitted <- InvBoxCox(out$fitted,lambda)
     out$mean <- InvBoxCox(out$mean,lambda)
-	  if(exists("out$lower"))  # PI = TRUE
+	  if(PI)  # PI = TRUE
 	  {
 		out$lower <- InvBoxCox(out$lower,lambda)
 		out$upper <- InvBoxCox(out$upper,lambda)
